--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/codeto/master-nodejs#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "*",
+    "multer": "^1.1.0",
     "mysql": "^2.11.1",
     "q": "^1.4.1"
   }
