--- a/node/package.json
+++ b/node/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "express3-handlebars": "^0.5.2",
-    "node-persist": "^0.0.8"
+    "node-persist": "0.0.8"
   },
   "devDependencies": {},
   "scripts": {
