--- a/blog/package.json
+++ b/blog/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "config": "^1.21.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0"
