--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^3.3.6",
     "config": "^1.21.0",
     "ejs": "^2.4.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.11.1",
+    "q": "^1.4.1"
   }
 }
