--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "config": "^1.21.0",
     "ejs": "^2.4.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mysql": "^2.11.1",
+    "q": "^1.4.1"
   }
 }
