--- a/blog/package.json
+++ b/blog/package.json
@@ -9,6 +9,7 @@
   "author": "Cuong Ba",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
     "ejs": "^2.4.2",
