--- a/blog/package.json
+++ b/blog/package.json
@@ -14,6 +14,7 @@
     "config": "^1.21.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "mongodb": "^2.2.4",
     "mysql": "^2.11.1",
     "q": "^1.4.1"
