--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,7 @@
     "config": "^1.21.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "lite-server": "^2.2.2",
     "md5": "^2.1.0",
     "mongodb": "^2.2.4",
