add session management

--- a/blog/package.json
+++ b/blog/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.14.0",
     "mongodb": "^2.2.4",
     "mysql": "^2.11.1",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "redis": "^2.6.2"
   }
 }
