--- a/blog/package.json
+++ b/blog/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.2.4",
     "mysql": "^2.11.1",
     "q": "^1.4.1",
-    "redis": "^2.6.2"
+    "redis": "^2.6.2",
+    "socket.io": "^1.4.8"
   }
 }
