--- a/blog/package.json
+++ b/blog/package.json
@@ -19,6 +19,8 @@
     "mongodb": "^2.2.4",
     "mysql": "^2.11.1",
     "node-gyp": "^3.4.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "redis": "^2.6.2",
+    "socket.io": "^1.4.8"
   }
 }
