--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "config": "^1.21.0",
+    "connect-redis": "^3.1.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
